tests/errors/runtime.NotEnoughArguments.2.res
>> Runtime | File: runtime.NotEnoughArguments.2.art
     error | Line: 1
           | 
           | cannot perform map
           | not enough parameters: 3 required